Add feature to change transaction status

--- a/src/main/java/com/mycompany/gui/MainWindow.form
+++ b/src/main/java/com/mycompany/gui/MainWindow.form
@@ -341,6 +341,7 @@
                     </Property>
                   </Properties>
                   <Events>
+                    <EventHandler event="componentHidden" listener="java.awt.event.ComponentListener" parameters="java.awt.event.ComponentEvent" handler="dashboardContentMonitorPanelComponentHidden"/>
                     <EventHandler event="componentShown" listener="java.awt.event.ComponentListener" parameters="java.awt.event.ComponentEvent" handler="dashboardContentMonitorPanelComponentShown"/>
                   </Events>
                   <Constraints>
@@ -829,7 +830,7 @@
                                               <Group type="102" attributes="0">
                                                   <Component id="jLabel26" min="-2" max="-2" attributes="0"/>
                                                   <EmptySpace pref="52" max="32767" attributes="0"/>
-                                                  <Component id="historyTransactionAmountPaidByClient" min="-2" pref="129" max="-2" attributes="0"/>
+                                                  <Component id="historyTransactionAmountPaidByClientTextField" min="-2" pref="129" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
                                           <EmptySpace max="-2" attributes="0"/>
@@ -841,7 +842,7 @@
                                       <Group type="102" alignment="0" attributes="0">
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="historyTransactionAmountPaidByClient" min="-2" pref="27" max="-2" attributes="0"/>
+                                              <Component id="historyTransactionAmountPaidByClientTextField" min="-2" pref="27" max="-2" attributes="0"/>
                                               <Component id="jLabel26" min="-2" max="-2" attributes="0"/>
                                           </Group>
                                           <EmptySpace pref="53" max="32767" attributes="0"/>
@@ -860,12 +861,15 @@
                                     <Property name="text" type="java.lang.String" value="Bayar"/>
                                   </Properties>
                                 </Component>
-                                <Component class="javax.swing.JTextField" name="historyTransactionAmountPaidByClient">
+                                <Component class="javax.swing.JTextField" name="historyTransactionAmountPaidByClientTextField">
                                 </Component>
                                 <Component class="javax.swing.JButton" name="historyTransactionPayButton">
                                   <Properties>
                                     <Property name="text" type="java.lang.String" value="Bayar"/>
                                   </Properties>
+                                  <Events>
+                                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="historyTransactionPayButtonActionPerformed"/>
+                                  </Events>
                                 </Component>
                               </SubComponents>
                             </Container>
