Add history transaction report

--- a/src/main/java/com/mycompany/gui/MainWindow.form
+++ b/src/main/java/com/mycompany/gui/MainWindow.form
@@ -897,7 +897,7 @@
                                       <Group type="102" alignment="0" attributes="0">
                                           <EmptySpace max="-2" attributes="0"/>
                                           <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="jButton1" max="32767" attributes="0"/>
+                                              <Component id="historyPrintButton" max="32767" attributes="0"/>
                                               <Group type="102" alignment="0" attributes="0">
                                                   <Group type="103" groupAlignment="0" attributes="0">
                                                       <Component id="jLabel21" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -942,7 +942,7 @@
                                               <Component id="historyTransactionStatusLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                                           </Group>
                                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                          <Component id="jButton1" pref="30" max="32767" attributes="0"/>
+                                          <Component id="historyPrintButton" pref="30" max="32767" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
@@ -973,10 +973,13 @@
                                     <Property name="text" type="java.lang.String" value="Keterangan"/>
                                   </Properties>
                                 </Component>
-                                <Component class="javax.swing.JButton" name="jButton1">
+                                <Component class="javax.swing.JButton" name="historyPrintButton">
                                   <Properties>
                                     <Property name="text" type="java.lang.String" value="Cetak"/>
                                   </Properties>
+                                  <Events>
+                                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="historyPrintButtonActionPerformed"/>
+                                  </Events>
                                 </Component>
                                 <Component class="javax.swing.JLabel" name="historyTransactionPaidAmountByClientLabel">
                                   <Properties>
